Updated: 07/17/2018 - Fixed title alignment

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -7,4 +7,12 @@ page-about {
     #item-md {
         background: transparent;
       }
+    .md{
+       #title {
+
+        }
+        position: absolute;
+        text-align: center;
+        margin: 50;
+    }
 }
