--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,12 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  brown:      #703912,
+  medium:     #a4451e,
+  golden:     #f3bb5a,
+  creme:      #fdf9f0,
+  lblue:      #48bbfc
 );
 
 
@@ -86,3 +91,12 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+//Toolbar
+$toolbar-background:  map-get($colors, brown );
+$toolbar-ios-height: 44px;
+$toolbar-md-height: 56px;
+$toolbar-wp-height: 46px;
+
+//Title
+$toolbar-md-title-font-size: 1.5em;
